Improve viewport height issues on mobile browsers

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -64,7 +64,7 @@
     overflow: hidden;
     background: no-repeat center;
     background-size: cover;
-    height: 100vh;
+    height: $panel-height;
     color: $white;
     @include flex;
     position: relative;
